kubernetes/connection-between-pods/backend.yml
apiVersion: extensions/v1
kind: Deployment
metadata:
  name: backend
  namespace: deployment
  labels:
    name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend
    spec:
      containers:
      - name: backend
        image: nginx
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
